--- a/Makefile.common
+++ b/Makefile.common
@@ -20,9 +20,21 @@ endif
 
 # GFXPrim
 SOURCES_C += \
-    $(GFXPRIM_LIBS)/backends/gp_backend.c \
-    $(GFXPRIM_LIBS)/backends/gp_clipboard.c \
-    $(GFXPRIM_LIBS)/backends/gp_backend_virtual.c
+	$(GFXPRIM_LIBS)/backends/gp_aalib.c \
+	$(GFXPRIM_LIBS)/backends/gp_backend.c \
+	$(GFXPRIM_LIBS)/backends/gp_backend_init.c \
+	$(GFXPRIM_LIBS)/backends/gp_backend_virtual.c \
+	$(GFXPRIM_LIBS)/backends/gp_clipboard.c \
+	$(GFXPRIM_LIBS)/backends/gp_input_driver_sdl.c \
+	$(GFXPRIM_LIBS)/backends/gp_linux_fb.c \
+	$(GFXPRIM_LIBS)/backends/gp_proxy.c \
+	$(GFXPRIM_LIBS)/backends/gp_proxy_cli.c \
+	$(GFXPRIM_LIBS)/backends/gp_proxy_conn.c \
+	$(GFXPRIM_LIBS)/backends/gp_proxy_proto.c \
+	$(GFXPRIM_LIBS)/backends/gp_proxy_shm.c \
+	$(GFXPRIM_LIBS)/backends/gp_sdl.c \
+	$(GFXPRIM_LIBS)/backends/gp_x11.c \
+	$(GFXPRIM_LIBS)/backends/gp_xcb.c
 
 SOURCES_C += $(GFXPRIM_LIBS)/core/gp_blit.c \
     $(GFXPRIM_LIBS)/core/gp_blit.gen.c \
@@ -115,3 +127,82 @@ SOURCES_C += $(GFXPRIM_LIBS)/utils/gp_block_alloc.c \
     $(GFXPRIM_LIBS)/utils/gp_matrix.c \
     $(GFXPRIM_LIBS)/utils/gp_vec.c \
     $(GFXPRIM_LIBS)/utils/gp_vec_str.c
+
+SOURCES_C += $(GFXPRIM_LIBS)/loaders/gp_bmp.c \
+	$(GFXPRIM_LIBS)/loaders/gp_container.c \
+	$(GFXPRIM_LIBS)/loaders/gp_data_storage.c \
+	$(GFXPRIM_LIBS)/loaders/gp_exif.c \
+	$(GFXPRIM_LIBS)/loaders/gp_gif.c \
+	$(GFXPRIM_LIBS)/loaders/gp_ico.c \
+	$(GFXPRIM_LIBS)/loaders/gp_io.c \
+	$(GFXPRIM_LIBS)/loaders/gp_io_zlib.c \
+	$(GFXPRIM_LIBS)/loaders/gp_jp2.c \
+	$(GFXPRIM_LIBS)/loaders/gp_jpg.c \
+	$(GFXPRIM_LIBS)/loaders/gp_line_convert.c \
+	$(GFXPRIM_LIBS)/loaders/gp_loader.c \
+	$(GFXPRIM_LIBS)/loaders/gp_pcx.c \
+	$(GFXPRIM_LIBS)/loaders/gp_png.c \
+	$(GFXPRIM_LIBS)/loaders/gp_pnm.c \
+	$(GFXPRIM_LIBS)/loaders/gp_psd.c \
+	$(GFXPRIM_LIBS)/loaders/gp_psp.c \
+	$(GFXPRIM_LIBS)/loaders/gp_rar.c \
+	$(GFXPRIM_LIBS)/loaders/gp_tiff.c \
+	$(GFXPRIM_LIBS)/loaders/gp_webp.c \
+	$(GFXPRIM_LIBS)/loaders/gp_zip.c
+
+SOURCES_C += $(GFXPRIM_LIBS)/text/gp_default_font.c \
+	$(GFXPRIM_LIBS)/text/gp_font.c \
+	$(GFXPRIM_LIBS)/text/gp_font_c64.c \
+	$(GFXPRIM_LIBS)/text/gp_font_haxor_narrow_18.c \
+	$(GFXPRIM_LIBS)/text/gp_fonts.c \
+	$(GFXPRIM_LIBS)/text/gp_font_tiny.c \
+	$(GFXPRIM_LIBS)/text/gp_free_type.c \
+	$(GFXPRIM_LIBS)/text/gp_haxor_narrow_15.c \
+	$(GFXPRIM_LIBS)/text/gp_haxor_narrow_16.c \
+	$(GFXPRIM_LIBS)/text/gp_haxor_narrow_17.c \
+	$(GFXPRIM_LIBS)/text/gp_haxor_square_8x8.c \
+	$(GFXPRIM_LIBS)/text/gp_text.c \
+	$(GFXPRIM_LIBS)/text/gp_text.gen.c \
+	$(GFXPRIM_LIBS)/text/gp_text_metric.c
+
+SOURCES_C += $(GFXPRIM_LIBS)/widgets/gp_date_time.c \
+	$(GFXPRIM_LIBS)/widgets/gp_dialog.c \
+	$(GFXPRIM_LIBS)/widgets/gp_dialog_file.c \
+	$(GFXPRIM_LIBS)/widgets/gp_dialog_input.c \
+	$(GFXPRIM_LIBS)/widgets/gp_dialog_msg.c \
+	$(GFXPRIM_LIBS)/widgets/gp_dir_cache.c \
+	$(GFXPRIM_LIBS)/widgets/gp_file_size.c \
+	$(GFXPRIM_LIBS)/widgets/gp_key_repeat_timer.c \
+	$(GFXPRIM_LIBS)/widgets/gp_markup_parser.c \
+	$(GFXPRIM_LIBS)/widgets/gp_string.c \
+	$(GFXPRIM_LIBS)/widgets/gp_widget_app.c \
+	$(GFXPRIM_LIBS)/widgets/gp_widget_bool.c \
+	$(GFXPRIM_LIBS)/widgets/gp_widget_button.c \
+	$(GFXPRIM_LIBS)/widgets/gp_widget.c \
+	$(GFXPRIM_LIBS)/widgets/gp_widget_checkbox.c \
+	$(GFXPRIM_LIBS)/widgets/gp_widget_choice.c \
+	$(GFXPRIM_LIBS)/widgets/gp_widget_event.c \
+	$(GFXPRIM_LIBS)/widgets/gp_widget_frame.c \
+	$(GFXPRIM_LIBS)/widgets/gp_widget_gfx.c \
+	$(GFXPRIM_LIBS)/widgets/gp_widget_grid.c \
+	$(GFXPRIM_LIBS)/widgets/gp_widget_int.c \
+	$(GFXPRIM_LIBS)/widgets/gp_widget_json.c \
+	$(GFXPRIM_LIBS)/widgets/gp_widget_label.c \
+	$(GFXPRIM_LIBS)/widgets/gp_widget_markup.c \
+	$(GFXPRIM_LIBS)/widgets/gp_widget_ops.c \
+	$(GFXPRIM_LIBS)/widgets/gp_widget_overlay.c \
+	$(GFXPRIM_LIBS)/widgets/gp_widget_pbar.c \
+	$(GFXPRIM_LIBS)/widgets/gp_widget_pixmap.c \
+	$(GFXPRIM_LIBS)/widgets/gp_widget_radio_button.c \
+	$(GFXPRIM_LIBS)/widgets/gp_widget_render.c \
+	$(GFXPRIM_LIBS)/widgets/gp_widgets_color_scheme.c \
+	$(GFXPRIM_LIBS)/widgets/gp_widget_scroll_area.c \
+	$(GFXPRIM_LIBS)/widgets/gp_widget_size_units.c \
+	$(GFXPRIM_LIBS)/widgets/gp_widget_spin_button.c \
+	$(GFXPRIM_LIBS)/widgets/gp_widget_stock.c \
+	$(GFXPRIM_LIBS)/widgets/gp_widget_switch.c \
+	$(GFXPRIM_LIBS)/widgets/gp_widget_table.c \
+	$(GFXPRIM_LIBS)/widgets/gp_widget_tabs.c \
+	$(GFXPRIM_LIBS)/widgets/gp_widget_tattr.c \
+	$(GFXPRIM_LIBS)/widgets/gp_widget_tbox.c \
+	$(GFXPRIM_LIBS)/widgets/gp_widget_timer.c
