--- a/Makefile.common
+++ b/Makefile.common
@@ -26,7 +26,7 @@ SOURCES_C += \
 	$(GFXPRIM_LIBS)/backends/gp_backend_virtual.c \
 	$(GFXPRIM_LIBS)/backends/gp_clipboard.c \
 	$(GFXPRIM_LIBS)/backends/gp_input_driver_sdl.c \
-	$(GFXPRIM_LIBS)/backends/gp_linux_fb.c \
+	#$(GFXPRIM_LIBS)/backends/gp_linux_fb.c \
 	$(GFXPRIM_LIBS)/backends/gp_proxy.c \
 	$(GFXPRIM_LIBS)/backends/gp_proxy_cli.c \
 	$(GFXPRIM_LIBS)/backends/gp_proxy_conn.c \
@@ -36,23 +36,27 @@ SOURCES_C += \
 	$(GFXPRIM_LIBS)/backends/gp_x11.c \
 	$(GFXPRIM_LIBS)/backends/gp_xcb.c
 
-SOURCES_C += $(GFXPRIM_LIBS)/core/gp_blit.c \
+SOURCES_C += \
+	$(GFXPRIM_LIBS)/core/gp_blit.c \
     $(GFXPRIM_LIBS)/core/gp_blit.gen.c \
     $(GFXPRIM_LIBS)/core/gp_common.c \
     $(GFXPRIM_LIBS)/core/gp_convert.gen.c \
     $(GFXPRIM_LIBS)/core/gp_debug.c \
     $(GFXPRIM_LIBS)/core/gp_fill.gen.c \
-    $(GFXPRIM_LIBS)/core/gp_gamma.c \
     $(GFXPRIM_LIBS)/core/gp_gamma_correction.gen.c \
+    $(GFXPRIM_LIBS)/core/gp_gamma.c \
     $(GFXPRIM_LIBS)/core/gp_get_put_pixel.c \
     $(GFXPRIM_LIBS)/core/gp_pixel.c \
     $(GFXPRIM_LIBS)/core/gp_pixel.gen.c \
     $(GFXPRIM_LIBS)/core/gp_pixmap.c \
+    $(GFXPRIM_LIBS)/core/gp_threads.c \
     $(GFXPRIM_LIBS)/core/gp_write_pixel.c
 
-SOURCES_C += $(GFXPRIM_LIBS)/filters/gp_add.gen.c \
+SOURCES_C += \
+	$(GFXPRIM_LIBS)/filters/gp_add.gen.c \
     $(GFXPRIM_LIBS)/filters/gp_apply_tables.c \
     $(GFXPRIM_LIBS)/filters/gp_apply_tables.gen.c \
+    $(GFXPRIM_LIBS)/filters/gp_blur.c \
     $(GFXPRIM_LIBS)/filters/gp_brightness_contrast.gen.c \
     $(GFXPRIM_LIBS)/filters/gp_brightness.gen.c \
     $(GFXPRIM_LIBS)/filters/gp_contrast.gen.c \
@@ -69,6 +73,7 @@ SOURCES_C += $(GFXPRIM_LIBS)/filters/gp_add.gen.c \
     $(GFXPRIM_LIBS)/filters/gp_laplace.c \
     $(GFXPRIM_LIBS)/filters/gp_linear_convolution.c \
     $(GFXPRIM_LIBS)/filters/gp_linear_convolution.gen.c \
+    $(GFXPRIM_LIBS)/filters/gp_linear_threads.c \
     $(GFXPRIM_LIBS)/filters/gp_max.gen.c \
     $(GFXPRIM_LIBS)/filters/gp_median.c \
     $(GFXPRIM_LIBS)/filters/gp_min.gen.c \
@@ -88,7 +93,8 @@ SOURCES_C += $(GFXPRIM_LIBS)/filters/gp_add.gen.c \
     $(GFXPRIM_LIBS)/filters/gp_sigma.c \
     $(GFXPRIM_LIBS)/filters/gp_weighted_median.c
 
-SOURCES_C += $(GFXPRIM_LIBS)/gfx/gp_arc.c \
+SOURCES_C += \
+	$(GFXPRIM_LIBS)/gfx/gp_arc.c \
     $(GFXPRIM_LIBS)/gfx/gp_circle.c \
     $(GFXPRIM_LIBS)/gfx/gp_circle.gen.c \
     $(GFXPRIM_LIBS)/gfx/gp_circle_seg.c \
@@ -97,7 +103,6 @@ SOURCES_C += $(GFXPRIM_LIBS)/gfx/gp_arc.c \
     $(GFXPRIM_LIBS)/gfx/gp_fill_circle.gen.c \
     $(GFXPRIM_LIBS)/gfx/gp_fill_ellipse.gen.c \
     $(GFXPRIM_LIBS)/gfx/gp_fill_ring.gen.c \
-    $(GFXPRIM_LIBS)/gfx/gp_fill_triangle.gen.c \
     $(GFXPRIM_LIBS)/gfx/gp_hline.c \
     $(GFXPRIM_LIBS)/gfx/gp_hline.gen.c \
     $(GFXPRIM_LIBS)/gfx/gp_line_clip.c \
@@ -112,13 +117,14 @@ SOURCES_C += $(GFXPRIM_LIBS)/gfx/gp_arc.c \
     $(GFXPRIM_LIBS)/gfx/gp_vline.c \
     $(GFXPRIM_LIBS)/gfx/gp_vline.gen.c
 
-SOURCES_C += $(GFXPRIM_LIBS)/input/gp_event.c \
+SOURCES_C += \
+	$(GFXPRIM_LIBS)/input/gp_event.c \
     $(GFXPRIM_LIBS)/input/gp_event_queue.c \
-    $(GFXPRIM_LIBS)/input/gp_input_driver_kbd.c \
-    $(GFXPRIM_LIBS)/input/gp_input_driver_linux.c \
+    $(GFXPRIM_LIBS)/input/gp_event.c \
+    $(GFXPRIM_LIBS)/input/gp_keymap.c \
+    $(GFXPRIM_LIBS)/input/gp_keys.c \
     $(GFXPRIM_LIBS)/input/gp_task.c \
-    $(GFXPRIM_LIBS)/input/gp_timer.c \
-    $(GFXPRIM_LIBS)/input/gp_time_stamp.c
+    $(GFXPRIM_LIBS)/input/gp_timer.c
 
 SOURCES_C += $(GFXPRIM_LIBS)/loaders/gp_bmp.c \
 	$(GFXPRIM_LIBS)/loaders/gp_container.c \
@@ -157,28 +163,39 @@ SOURCES_C += $(GFXPRIM_LIBS)/text/gp_default_font.c \
 	$(GFXPRIM_LIBS)/text/gp_text.gen.c \
 	$(GFXPRIM_LIBS)/text/gp_text_metric.c
 
-SOURCES_C += $(GFXPRIM_LIBS)/utils/gp_block_alloc.c \
-    $(GFXPRIM_LIBS)/utils/gp_fds.c \
-    $(GFXPRIM_LIBS)/utils/gp_htable.c \
-    $(GFXPRIM_LIBS)/utils/gp_json.c \
-    $(GFXPRIM_LIBS)/utils/gp_matrix.c \
-    $(GFXPRIM_LIBS)/utils/gp_vec.c \
-    $(GFXPRIM_LIBS)/utils/gp_vec_str.c
+SOURCES_C += \
+	$(GFXPRIM_LIBS)/utils/linux/gp_app_cfg.c \
+	$(GFXPRIM_LIBS)/utils/linux/gp_fds.c \
+	$(GFXPRIM_LIBS)/utils/gp_app_cfg.c \
+	$(GFXPRIM_LIBS)/utils/gp_block_alloc.c \
+	$(GFXPRIM_LIBS)/utils/gp_htable.c \
+	$(GFXPRIM_LIBS)/utils/gp_json_common.c \
+	$(GFXPRIM_LIBS)/utils/gp_json_reader.c \
+	$(GFXPRIM_LIBS)/utils/gp_json_writer.c \
+	$(GFXPRIM_LIBS)/utils/gp_matrix.c \
+	$(GFXPRIM_LIBS)/utils/gp_utf.c \
+	$(GFXPRIM_LIBS)/utils/gp_vec_str.c \
+	$(GFXPRIM_LIBS)/utils/gp_vec.c
 
-SOURCES_C += $(GFXPRIM_LIBS)/widgets/gp_date_time.c \
-	$(GFXPRIM_LIBS)/widgets/gp_dialog.c \
+#SOURCES_C += \
+#	$(GFXPRIM_LIBS)/linux/gp_time_stamp.c
+
+SOURCES_C += \
+	$(GFXPRIM_LIBS)/widgets/gp_app_info.c \
+	$(GFXPRIM_LIBS)/widgets/gp_date_time.c \
 	$(GFXPRIM_LIBS)/widgets/gp_dialog_file.c \
 	$(GFXPRIM_LIBS)/widgets/gp_dialog_input.c \
 	$(GFXPRIM_LIBS)/widgets/gp_dialog_msg.c \
+	$(GFXPRIM_LIBS)/widgets/gp_dialog.c \
 	$(GFXPRIM_LIBS)/widgets/gp_dir_cache.c \
 	$(GFXPRIM_LIBS)/widgets/gp_file_size.c \
 	$(GFXPRIM_LIBS)/widgets/gp_key_repeat_timer.c \
+	$(GFXPRIM_LIBS)/widgets/gp_markup_html.c \
 	$(GFXPRIM_LIBS)/widgets/gp_markup_parser.c \
 	$(GFXPRIM_LIBS)/widgets/gp_string.c \
 	$(GFXPRIM_LIBS)/widgets/gp_widget_app.c \
 	$(GFXPRIM_LIBS)/widgets/gp_widget_bool.c \
 	$(GFXPRIM_LIBS)/widgets/gp_widget_button.c \
-	$(GFXPRIM_LIBS)/widgets/gp_widget.c \
 	$(GFXPRIM_LIBS)/widgets/gp_widget_checkbox.c \
 	$(GFXPRIM_LIBS)/widgets/gp_widget_choice.c \
 	$(GFXPRIM_LIBS)/widgets/gp_widget_event.c \
@@ -196,7 +213,6 @@ SOURCES_C += $(GFXPRIM_LIBS)/widgets/gp_date_time.c \
 	$(GFXPRIM_LIBS)/widgets/gp_widget_pixmap.c \
 	$(GFXPRIM_LIBS)/widgets/gp_widget_radio_button.c \
 	$(GFXPRIM_LIBS)/widgets/gp_widget_render.c \
-	$(GFXPRIM_LIBS)/widgets/gp_widgets_color_scheme.c \
 	$(GFXPRIM_LIBS)/widgets/gp_widget_scroll_area.c \
 	$(GFXPRIM_LIBS)/widgets/gp_widget_size_units.c \
 	$(GFXPRIM_LIBS)/widgets/gp_widget_spin_button.c \
@@ -206,4 +222,10 @@ SOURCES_C += $(GFXPRIM_LIBS)/widgets/gp_date_time.c \
 	$(GFXPRIM_LIBS)/widgets/gp_widget_tabs.c \
 	$(GFXPRIM_LIBS)/widgets/gp_widget_tattr.c \
 	$(GFXPRIM_LIBS)/widgets/gp_widget_tbox.c \
-	$(GFXPRIM_LIBS)/widgets/gp_widget_timer.c
+	$(GFXPRIM_LIBS)/widgets/gp_widget_timer.c \
+	$(GFXPRIM_LIBS)/widgets/gp_widget_uid.c \
+	$(GFXPRIM_LIBS)/widgets/gp_widget.c \
+	$(GFXPRIM_LIBS)/widgets/gp_widgets_color_scheme.c
+
+# Custom libretro stufffs
+SOURCES_C += gp_time_stamp.c
